--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
       <div id="header">
-          <h1>Карина Матушкина</h1>
-          <h3>Веб-разработчик</h3>
+          <h1>Karina Matushkina</h1>
+          <h3>Главный инженер по нагрузочному тестированию</h3>
           <p>
               <a href="mailto:kvmatushkina@gmail.com">kvmatushkina@gmail.com</a>,
               <a href="https://ello.co/devirr">ello.co/devirr</a>
